Added beaninfo plugin